objects/SalesTeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>RSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Owner</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesTeam__c</fullName>
        <label>Sales Team</label>
        <referenceTo>SalesTeam__c</referenceTo>
        <relationshipLabel>Sales Team Members</relationshipLabel>
        <relationshipName>SalesTeamMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Sales Team Members (CAM)</relationshipLabel>
        <relationshipName>SalesTeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Team Member</label>
    <nameField>
        <displayFormat>STM-{0000000}</displayFormat>
        <label>Sales Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>